use bootstrap to fix jumbotron alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ label{
   background-color: lightgray;
 }
 
+.jumbotron{
+align-self: center;
+margin: auto;
+}
+
 Input{
   text-align:center;
   font-size: 350%;
